homelab/pi-hole/traefik/pi-hole.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    app: pihole
  namespace: pihole
  name: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:2024.06.0
          ports:
            - name: dep-dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dep-dns-udp
              containerPort: 53
              protocol: UDP
            - name: dep-http
              containerPort: 80
              protocol: TCP
      restartPolicy: Always
      dnsPolicy: ClusterFirst
---
apiVersion: v1
kind: Service
metadata:
  namespace: pihole
  name: pihole-web
spec:
  selector:
    app: pihole
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: dep-http
---
apiVersion: v1
kind: Service
metadata:
  namespace: pihole
  name: pihole-dns-tcp
spec:
  selector:
    app: pihole
  ports:
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: dep-dns-tcp
---
apiVersion: v1
kind: Service
metadata:
  namespace: pihole
  name: pihole-dns-udp
spec:
  selector:
    app: pihole
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: dep-dns-udp
