homelab/pi-hole/traefik/pi-hole-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: pihole
  name: pihole-ingress
spec:
  rules:
    - http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: pihole-web
                port:
                  name: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  namespace: pihole
  name: pihole-dns-tcp-ingress
spec:
  entryPoints:
    - dns-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: pihole-dns-tcp
          port: dns-tcp
          weight: 10
